<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/warna"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fontFamily="@font/anton"
        android:background="@drawable/warna"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="212dp"
            android:layout_height="66dp"
            android:fontFamily="@font/arbutus"
            android:text="@string/YGAPP"
            android:textSize="48sp"
            android:layout_marginLeft="82dp"
            android:layout_marginRight="82dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.166" />

        <TextView
            android:id="@+id/textbahasa"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:fontFamily="@font/anton"
            android:text="@string/language"
            android:textSize="15sp" />

        <Spinner
            android:id="@+id/spinbahasa"
            android:layout_width="232dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="170dp"
            android:layout_marginTop="-25dp"
            android:drawSelectorOnTop="true"
            android:entries="@array/spinner_bahasa"
            android:fontFamily="@font/anton"
            android:prompt="@string/bahasa" />

        <TextView
            android:id="@+id/textfont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/anton"
            android:text="@string/ukuran_font"
            android:textSize="15sp" />

        <Spinner
            android:id="@+id/spinfont"
            android:layout_width="386dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="170dp"
            android:layout_marginTop="-25dp"
            android:drawSelectorOnTop="true"
            android:entries="@array/spinner_fontsize"
            android:prompt="@string/ukuran_font" />

        <Button
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/logout"
            android:textColor="#000000" />
    </LinearLayout>
</LinearLayout>